hexdns_django/kube/unbound.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexdns-unbound
  labels:
    app: hexdns
    part: unbound
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hexdns
      part: unbound
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: hexdns
        part: unbound
    spec:
      volumes:
        - name: conf
          configMap:
            name: hexdns-unbound-conf
      containers:
        - name: unbound
          image: klutchell/unbound
          ports:
            - containerPort: 5053
          volumeMounts:
            - mountPath: "/opt/unbound/etc/unbound"
              name: conf
---
apiVersion: v1
kind: Service
metadata:
  name: hexdns-unbound
  labels:
    app: hexdns
    part: unbound
spec:
  selector:
    app: hexdns
    part: unbound
  ports:
    - port: 5053
      targetPort: 5053
      protocol: UDP
      name: dns-udp
    - port: 5053
      targetPort: 5053
      protocol: TCP
      name: dns-tcp
