hexdns_django/kube/axfr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexdns-axfr
  labels:
    app: hexdns
    part: axfr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hexdns
      part: axfr
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: hexdns
        part: axfr
    spec:
      volumes:
        - name: knot
          emptyDir: {}
        - name: config
          configMap:
            name: hexdns-knot-axfr
        - name: rundir
          emptyDir: {}
        - name: static
          persistentVolumeClaim:
            claimName: hexdns-django-static
        - name: media
          persistentVolumeClaim:
            claimName: hexdns-django-media
        - name: pubkey
          configMap:
            name: hexdns-key-pub
        - name: domains-pubkey
          configMap:
            name: domains-jwt-pub
      containers:
        - name: knot
          image: as207960/knotd:7
          imagePullPolicy: Always
          command: [
            "sh", "-c",
            "cp /config-template/knot.conf /config/knot.conf &&
             sed -i \"s/(xfr-secret)/$XFR_SECRET/g\" /config/knot.conf &&
             sed -i \"s/(primary-address)/$HEXDNS_KNOT_PRIMARY_SERVICE_HOST/g\" /config/knot.conf &&
             sed -i \"s/(nsid)/$HOSTNAME/g\" /config/knot.conf &&
             sleep 15 &&
             while true; do rm /rundir/knot.pid; knotd; done"
          ]
          readinessProbe:
            tcpSocket:
              port: 53
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/storage/"
              name: knot
            - mountPath: "/config-template/"
              name: config
            - mountPath: "/rundir/"
              name: rundir
        - name: reloader
          image: as207960/hexdns-knot-sidecar-secondary:(version)
          imagePullPolicy: Always
          command: ["python3", "/app/sidecar-secondary.py"]
        - name: axfr
          image: as207960/hexdns-axfr:(version)
          imagePullPolicy: Always
          readinessProbe:
            tcpSocket:
              port: 5053
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/storage/"
              name: knot
        - name: notify
          image: as207960/hexdns-django:(version)
          imagePullPolicy: Always
          command: [ "sh", "-c", "python3 manage.py run-axfr-notify" ]
          volumeMounts:
            - mountPath: "/app/static/"
              name: static
            - mountPath: "/app/media/"
              name: media
            - mountPath: "/pubkey/"
              name: pubkey
            - mountPath: "/domains-pubkey/"
              name: domains-pubkey
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hexdns-axfr
spec:
  podSelector:
    matchLabels:
      app: hexdns
      part: axfr
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - protocol: TCP
        port: 5053
      - protocol: UDP
        port: 5053
---
apiVersion: v1
kind: Service
metadata:
  name: hexdns-axfr-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: "hexdns-axfr"
    metallb.universe.tf/loadBalancerIPs: "2a0e:1cc1:1::1:1a"
spec:
  selector:
    app: hexdns
    part: axfr
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 53
      targetPort: 5053
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hexdns-axfr-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: "hexdns-axfr"
    metallb.universe.tf/loadBalancerIPs: "2a0e:1cc1:1::1:1a"
spec:
  selector:
    app: hexdns
    part: axfr
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 53
      targetPort: 5053
      protocol: UDP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexdns-axfr-notify
  labels:
    app: hexdns
    part: axfr-notify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hexdns
      part: axfr-notify
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"hexdns-notify-ip6-ippool\"]"
      labels:
        app: hexdns
        part: axfr-notify
    spec:
      containers:
        - name: notify
          image: as207960/hexdns-axfr-notify:(version)
          imagePullPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hexdns-axfr-notify
spec:
  podSelector:
    matchLabels:
      app: hexdns
      part: axfr-notify
  policyTypes:
    - Ingress
