hexdns_django/kube/django.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hexdns
---
apiVersion: v1
kind: Service
metadata:
  name: hexdns-redirect
  namespace: hexdns
spec:
  type: ExternalName
  externalName: hexdns-redirect.default.svc.kube-cluster.as207960.net
  ports:
    - port: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexdns-django
  labels:
    app: hexdns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hexdns
      part: django
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: hexdns
        part: django
    spec:
      serviceAccountName: hexdns
      volumes:
        - name: pubkey
          configMap:
            name: hexdns-key-pub
        - name: domains-pubkey
          configMap:
            name: domains-jwt-pub
        - name: signal-privkey
          secret:
            secretName: hexdns-signal-privkey
      containers:
        - name: gunicorn
          image: as207960/hexdns-django:(version)
          imagePullPolicy: Always
          command: ["gunicorn", "-w", "4", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "hexdns_django.wsgi:application"]
          ports:
            - containerPort: 8000
          volumeMounts: *volumeMounts
          envFrom: *envFrom
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hexdns-django
spec:
  podSelector:
    matchLabels:
      app: hexdns
      part: django
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexdns-redirect
  labels:
    app: hexdns
    part: redirect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hexdns
      part: redirect
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: hexdns
        part: redirect
    spec:
      volumes:
        - name: pubkey
          configMap:
            name: hexdns-key-pub
        - name: domains-pubkey
          configMap:
            name: domains-jwt-pub
        - name: signal-privkey
          secret:
            secretName: hexdns-signal-privkey
      containers:
        - name: gunicorn
          image: as207960/hexdns-django:(version)
          imagePullPolicy: Always
          command: ["gunicorn", "-w", "4", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "dns_grpc.redirect:application"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/pubkey/"
              name: pubkey
            - mountPath: "/domains-pubkey/"
              name: domains-pubkey
            - mountPath: "/signal-privkey/"
              name: signal-privkey
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hexdns-redirect
spec:
  podSelector:
    matchLabels:
      app: hexdns
      part: redirect
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexdns-celery
  labels:
    app: hexdns
    part: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hexdns
      part: celery
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: hexdns
        part: celery
    spec:
      volumes:
        - name: pubkey
          configMap:
            name: hexdns-key-pub
        - name: domains-pubkey
          configMap:
            name: domains-jwt-pub
        - name: signal-privkey
          secret:
            secretName: hexdns-signal-privkey
        - name: celery-state
          emptyDir: {}
      containers:
        - name: celery
          image: as207960/hexdns-django:(version)
          imagePullPolicy: Always
          command: ["celery",  "-A", "hexdns_django", "worker", "--loglevel=INFO", "-c", "4"]
          volumeMounts:
            - mountPath: "/pubkey/"
              name: pubkey
            - mountPath: "/domains-pubkey/"
              name: domains-pubkey
            - mountPath: "/signal-privkey/"
              name: signal-privkey
            - mountPath: "/celery-state/"
              name: celery-state
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hexdns-celery
spec:
  podSelector:
    matchLabels:
      app: hexdns
      part: celery
  policyTypes:
  - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexdns-console
  labels:
    app: hexdns
    part: console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hexdns
      part: console
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: hexdns
        part: console
    spec:
      volumes:
        - name: knot
          persistentVolumeClaim:
            claimName: hexdns-knot
        - name: pubkey
          configMap:
            name: hexdns-key-pub
        - name: domains-pubkey
          configMap:
            name: domains-jwt-pub
        - name: signal-privkey
          secret:
            secretName: hexdns-signal-privkey
      containers:
        - name: console
          image: as207960/hexdns-django-root:(version)
          imagePullPolicy: Always
          command: ["bash"]
          tty: true
          stdin: true
          volumeMounts:
            - mountPath: "/pubkey/"
              name: pubkey
            - mountPath: "/knot/"
              name: knot
            - mountPath: "/domains-pubkey/"
              name: domains-pubkey
            - mountPath: "/signal-privkey/"
              name: signal-privkey
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hexdns-console
spec:
  podSelector:
    matchLabels:
      app: hexdns
      part: console
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hexdns-cronjob
spec:
  podSelector:
    matchLabels:
      app: hexdns
      part-type: cronjob
  policyTypes:
  - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexdns-grpc
  labels:
    app: hexdns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hexdns
      part: grpc
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: hexdns
        part: grpc
    spec:
      volumes:
        - name: pubkey
          configMap:
            name: hexdns-key-pub
        - name: privkey
          secret:
            secretName: hexdns-key-priv
        - name: domains-pubkey
          configMap:
            name: domains-jwt-pub
        - name: signal-privkey
          secret:
            secretName: hexdns-signal-privkey
      containers:
        - name: grpc
          image: as207960/hexdns-django:(version)
          imagePullPolicy: Always
          command: ["sh", "-c", "python3 manage.py grpcserver -v 2 --traceback --max_workers 128"]
          ports:
            - containerPort: 50051
          volumeMounts:
            - mountPath: "/pubkey/"
              name: pubkey
            - mountPath: "/domains-pubkey/"
              name: domains-pubkey
            - mountPath: "/privkey/"
              name: privkey
            - mountPath: "/signal-privkey/"
              name: signal-privkey
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hexdns-grpc
spec:
  podSelector:
    matchLabels:
      app: hexdns
      part: grpc
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: hexdns
          part: cache
    - podSelector:
        matchLabels:
          app: hexdns
          part: update
    - podSelector:
        matchLabels:
          app: hexdns
          part: axfr
    ports:
    - protocol: TCP
      port: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexdns-run-rpc
  labels:
    app: hexdns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hexdns
      part: rpc
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: hexdns
        part: rpc
    spec:
      volumes:
        - name: pubkey
          configMap:
            name: hexdns-key-pub
        - name: privkey
          secret:
            secretName: hexdns-key-priv
        - name: domains-pubkey
          configMap:
            name: domains-jwt-pub
        - name: signal-privkey
          secret:
            secretName: hexdns-signal-privkey
      containers:
        - name: rpc
          image: as207960/hexdns-django:(version)
          imagePullPolicy: Always
          command: ["sh", "-c", "python3 manage.py run-rpc"]
          volumeMounts:
            - mountPath: "/pubkey/"
              name: pubkey
            - mountPath: "/domains-pubkey/"
              name: domains-pubkey
            - mountPath: "/privkey/"
              name: privkey
            - mountPath: "/signal-privkey/"
              name: signal-privkey
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hexdns-rpc
spec:
  podSelector:
    matchLabels:
      app: hexdns
      part: rpc
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hexdns-keycloak-events
spec:
  podSelector:
    matchLabels:
      app: hexdns
      part: keycloak-events
  policyTypes:
  - Ingress
---
apiVersion: v1
kind: Service
metadata:
  name: hexdns-django
  labels:
    app: hexdns
spec:
  selector:
    app: hexdns
    part: django
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hexdns-redirect
  labels:
    app: hexdns
    part: redirect
spec:
  selector:
    app: hexdns
    part: redirect
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hexdns-grpc
  labels:
    app: hexdns
spec:
  selector:
    app: hexdns
    part: grpc
  ports:
    - port: 50051
      targetPort: 50051

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hexdns-ingress
  annotations:
    cert-manager.io/cluster-issuer: "gts"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dns.glauca.digital
      secretName: dns-tls
  rules:
    - host: dns.glauca.digital
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hexdns-django
                port:
                  number: 8000
