hexdns_django/kube/dnssec.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexdns-dnssec
  labels:
    app: hexdns
    part: dnssec
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hexdns
      part: dnssec
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ip6-ippool\"]"
      labels:
        app: hexdns
        part: dnssec
    spec:
      containers:
        - name: notify
          image: as207960/hexdns-dnssec-signer:(version)
          imagePullPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hexdns-dnssec
spec:
  podSelector:
    matchLabels:
      app: hexdns
      part: dnssec
  policyTypes:
    - Ingress
