hexdns_django/kube/knot-pre-signed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexdns-knot-pre-signed
  labels:
    app: hexdns
    part: knot
    role: pre-signed
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hexdns
      part: knot
      role: pre-signed
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"hexdns-primary-ip6-ippool\"]"
        prometheus.io/scrape: "true"
        prometheus.io/port: "9433"
        prometheus.io/path: "/metrics"
      labels:
        app: hexdns
        part: knot
        role: pre-signed
    spec:
      volumes:
        - name: knot
          emptyDir: {}
        - name: config
          configMap:
            name: hexdns-knot-pre-signed
        - name: rundir
          emptyDir: {}
        - name: devfuse
          hostPath:
            path: /dev/fuse
        - name: zones
          emptyDir: {}
      containers:
        - name: knot
          image: as207960/knotd:6
          imagePullPolicy: IfNotPresent
          command: [
            "sh", "-c",
            "cp /config-template/knot.conf /config/knot.conf &&
             sed -i \"s/(xfr-secret)/$XFR_SECRET/g\" /config/knot.conf &&
             sed -i \"s/(netnod-xfr-secret)/$NETNOD_XFR_SECRET/g\" /config/knot.conf &&
             sleep 15;
             while true; do rm /rundir/knot.pid; knotd; done"
          ]
          readinessProbe:
            tcpSocket:
              port: 53
            initialDelaySeconds: 15
            periodSeconds: 10
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /zones
              name: zones
              mountPropagation: Bidirectional
              readOnly: true
            - mountPath: "/storage/"
              name: knot
            - mountPath: "/config-template/"
              name: config
            - mountPath: "/rundir/"
              name: rundir
        - name: reloader
          image: as207960/hexdns-knot-sidecar:(version)
          imagePullPolicy: IfNotPresent
          command: [
            "sh", "-c",
            "sleep 30; python3 /app/sidecar.py"
          ]
          volumeMounts:
            - mountPath: "/rundir/"
              name: rundir
        - name: s3-zones
          image: as207960/goofys
          imagePullPolicy: IfNotPresent
          args: ["-c", "goofys -f --endpoint $ENDPOINT --region $REGION $BUCKET /mnt/s3"]
          lifecycle:
            preStop:
              exec:
                command: ["umount", "/mnt/s3"]
          securityContext:
            privileged: true
          volumeMounts:
            - name: devfuse
              mountPath: /dev/fuse
            - name: zones
              mountPath: /mnt/s3
              mountPropagation: Bidirectional
        - name: exporter
          image: as207960/knot-exporter:2
          imagePullPolicy: IfNotPresent
          command: [
            "sh", "-c",
            "sleep 20 && 
            python3 /app/knot_exporter --web-listen-addr :: --knot-socket-path /rundir/knot.sock --knot-library-path /usr/lib/x86_64-linux-gnu/libknot.so.11"
          ]
          readinessProbe:
            tcpSocket:
              port: 9433
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/rundir/"
              name: rundir
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hexdns-knot-pre-signed
spec:
  podSelector:
    matchLabels:
      app: hexdns
      part: knot
      role: pre-signed
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  - from:
      - namespaceSelector:
          matchLabels:
            role: metrics
    ports:
      - protocol: TCP
        port: 9433
---
apiVersion: v1
kind: Service
metadata:
  name: hexdns-knot-pre-signed
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: hexdns
    part: knot
    role: pre-signed
  ports:
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-tcp
