hexdns_django/kube/knot-secondary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexdns-knot-secondary
  labels:
    app: hexdns
    part: knot
    role: secondary
spec:
  replicas: 6
  selector:
    matchLabels:
      app: hexdns
      part: knot
      role: secondary
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
        prometheus.io/scrape: "true"
        prometheus.io/port: "9433"
        prometheus.io/path: "/metrics"
      labels:
        app: hexdns
        part: knot
        role: secondary
    spec:
      tolerations:
        - key: special
          operator: Equal
          value: edge
          effect: NoSchedule
      volumes:
        - name: knot
          emptyDir: {}
        - name: config
          configMap:
            name: hexdns-knot-secondary
        - name: rundir
          emptyDir: {}
        - name: quic-keys
          secret:
              secretName: hexdns-quic
      containers:
        - name: knot
          image: as207960/knotd:7
          imagePullPolicy: Always
          command: [
            "sh", "-c",
            "cp /config-template/knot.conf /config/knot.conf &&
             sed -i \"s/(xfr-secret)/$XFR_SECRET/g\" /config/knot.conf &&
             sed -i \"s/(primary-address)/$HEXDNS_KNOT_PRIMARY_SERVICE_HOST/g\" /config/knot.conf &&
             sed -i \"s/(ddns-primary-address)/$HEXDNS_UPDATE_SERVICE_HOST/g\" /config/knot.conf &&
             sed -i \"s/(nsid)/$HOSTNAME/g\" /config/knot.conf &&
             sleep 15 &&
             while true; do rm /rundir/knot.pid; knotd; done"
          ]
          readinessProbe:
            tcpSocket:
              port: 53
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/storage/"
              name: knot
            - mountPath: "/config-template/"
              name: config
            - mountPath: "/rundir/"
              name: rundir
            - mountPath: "/quic/"
              name: quic-keys
          securityContext:
            capabilities:
              add: [ "NET_RAW", "NET_ADMIN", "SYS_ADMIN", "IPC_LOCK", "SYS_RESOURCE" ]
        - name: reloader
          image: as207960/hexdns-knot-sidecar-secondary:(version)
          imagePullPolicy: Always
          command: ["python3", "/app/sidecar-secondary.py"]
        - name: exporter
          image: as207960/knot-exporter:2
          imagePullPolicy: Always
          command: [
            "sh", "-c",
            "sleep 20 && 
            python3 /app/knot_exporter --web-listen-addr :: --knot-socket-path /rundir/knot.sock --knot-library-path /usr/lib/x86_64-linux-gnu/libknot.so.11"
          ]
          readinessProbe:
            tcpSocket:
              port: 9433
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/rundir/"
              name: rundir
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hexdns-knot-secondary
spec:
  podSelector:
    matchLabels:
      app: hexdns
      part: knot
      role: secondary
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
        - protocol: UDP
          port: 853
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hexdns-knot-secondary-metrics
spec:
  podSelector:
    matchLabels:
      app: hexdns
      part: knot
      role: secondary
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              role: metrics
      ports:
        - protocol: TCP
          port: 9433
