hexdns_django/kube/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hexdns-nginx
  labels:
    app: hexdns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hexdns
      part: nginx
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: hexdns
        part: nginx
    spec:
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: hexdns-django-static
        - name: media
          persistentVolumeClaim:
            claimName: hexdns-django-media
        - name: conf
          configMap:
            name: hexdns-nginx-conf
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/data/static/"
              name: static
            - mountPath: "/data/media/"
              name: media
            - mountPath: "/etc/nginx/nginx.conf"
              name: conf
              subPath: "nginx.conf"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hexdns-nginx
spec:
  podSelector:
    matchLabels:
      app: hexdns
      part: nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hexdns-nginx
  labels:
    app: hexdns
spec:
  selector:
    app: hexdns
    part: nginx
  ports:
    - port: 80
      targetPort: 80
      name: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hexdns-ingress
  annotations:
    cert-manager.io/cluster-issuer: "gts"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
        - dns.glauca.digital
      secretName: dns-tls
  rules:
  - host: dns.glauca.digital
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hexdns-nginx
            port:
              number: 80
